# Computer-Vision-to-detect-pcb-area-size-color-_EmbeddedAI-IOT-WebDev

./: .gitignore  README.md  README_RUN.txt  app.py  detection_script.py  detection_service.py  esp32_firmware.ino  requirements.txt  start.sh  start_project.bat
backend/: .gitignore  .gitkeep  Cargo.toml  run.ps1
backend/src/: database.rs  handlers.rs  main.rs  models.rs
frontend/: history.html  index.html  login.html
frontend/css/: style.css
frontend/js/: auth-guard.js  detection.js  history.js  login.js
