[package]
name = "color-detection-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Base de données
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
# Utilitaires
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenv = "0.15"  # Pour charger les variables d'environnement

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client pour vérifier Flask
reqwest = { version = "0.11", features = ["json"] }

# Gestion des erreurs
anyhow = "1.0"
